# fraser_gehrig

./: .gitignore  README.md  player_stats.py  pyproject.toml  requirements.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: kaggle_data.py
fraser_gehrig/: fraser_gehrig.py
